frontend/src/app/components/channel/chat/chat.component.scss
nb-list-item {
  border-bottom: 0 !important;
  padding: 0 !important;
  margin-bottom: 25px;
  max-width: 95%;
  overflow-x: auto;
}

.loading-indicator {
  overflow: hidden;
}

nb-list-item:first-child {
  border-top: 0 !important;
}

.scroll-to-bottom-btn {
  position: fixed;
  bottom: calc(var(--input-height, 0px) + 25px);
  left: 30px;
  z-index: 1001;
}

